--- a/notebooks/environment_agent_test.ipynb
+++ b/notebooks/environment_agent_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "067cd868",
    "metadata": {},
    "outputs": [
@@ -41,6 +41,10 @@
    ],
    "source": [
     "# Own functions\n",
+    "%matplotlib inline\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import ipynb.fs  # Boilerplate required\n",
     "from .full.simulating_data import simulate_stock, get_finance_data, create_features\n",
     "\n",
@@ -48,11 +52,107 @@
     "import datetime\n",
     "\n",
     "# Environment\n",
-    "import TradingGym.trading_env as trading_env\n",
+    "#import TradingGym.trading_env as trading_env\n",
     "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from colour import Color"
+    "from colour import Color\n",
+    "\n",
+    "from .full.market_environment import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "233606ab",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'agent' object has no attribute 'agent_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-5a92a46e386b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0menv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmarket_env\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfee\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mmatched_buy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmatched_sell\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0magents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0magents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0magents\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprices\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\OneDrive\\Skrivebord\\repo\\speciale\\notebooks\\market_environment.ipynb\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self, agent)\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[1;34m\"            mean_price /= (len(matched_sell))\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;34m\"        else:\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;34m\"            mean_price = self.market_prices[-1]\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m     \u001b[1;34m\"            \\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[1;34m\"        print(mean_price)\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\OneDrive\\Skrivebord\\repo\\speciale\\notebooks\\market_environment.ipynb\u001b[0m in \u001b[0;36mmatch\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[1;34m\"        que_indices = range(len(self.agent))\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[1;34m\"        \\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m     \u001b[1;34m\"        return que_indices\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m     \u001b[1;34m\"    \\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;34m\"    def match(self):\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'agent' object has no attribute 'agent_id'"
+     ]
+    }
+   ],
+   "source": [
+    "agent1 = agent(1, test_data)\n",
+    "agent2 = agent(2, test_data)\n",
+    "agents = [agent1, agent2]\n",
+    "fee = 0.1\n",
+    "env = market_env(test_data, fee)\n",
+    "for i in range(10):\n",
+    "    state = env.step(agents)\n",
+    "    for j in range(len(agents)):\n",
+    "        agents[j].update(state)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f3be7019",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "Iteration:      1,   Func. Count:      6,   Neg. LLF: 3771.7104883016605\n",
+      "Iteration:      2,   Func. Count:     13,   Neg. LLF: 3910.4167612373767\n",
+      "Iteration:      3,   Func. Count:     20,   Neg. LLF: 3671.0292268192843\n",
+      "Iteration:      4,   Func. Count:     26,   Neg. LLF: 3595.8668242611107\n",
+      "Iteration:      5,   Func. Count:     32,   Neg. LLF: 3595.317313676273\n",
+      "Iteration:      6,   Func. Count:     38,   Neg. LLF: 3591.2739501309443\n",
+      "Iteration:      7,   Func. Count:     43,   Neg. LLF: 3591.2617764414554\n",
+      "Iteration:      8,   Func. Count:     48,   Neg. LLF: 3591.260941943763\n",
+      "Iteration:      9,   Func. Count:     53,   Neg. LLF: 3591.2608903737187\n",
+      "Iteration:     10,   Func. Count:     58,   Neg. LLF: 3591.260888166221\n",
+      "Iteration:     11,   Func. Count:     62,   Neg. LLF: 3591.260888166137\n",
+      "Optimization terminated successfully    (Exit mode 0)\n",
+      "            Current function value: 3591.260888166221\n",
+      "            Iterations: 11\n",
+      "            Function evaluations: 62\n",
+      "            Gradient evaluations: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = get_finance_data(\"FING-B.ST\")\n",
+    "returns, cum_returns, stock_prices = simulate_stock(data['Return'], 10, 10, data.Open[0])\n",
+    "test_data = stock_prices.iloc[:,1].values\n",
+    "test_data = test_data.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2e7c9516",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A3', 'A4', 'A2', 'A1']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = [\"A1\", \"A2\", \"A3\", \"A4\"]\n",
+    "Y = [0.4, 0.2, 0.1, 0.1]\n",
+    "[x for _, x in sorted(zip(Y, X))]"
    ]
   },
   {
@@ -91,19 +191,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:      1,   Func. Count:      6,   Neg. LLF: 3771.778908889899\n",
-      "Iteration:      2,   Func. Count:     13,   Neg. LLF: 3923.909565767427\n",
-      "Iteration:      3,   Func. Count:     20,   Neg. LLF: 3670.6859669865803\n",
-      "Iteration:      4,   Func. Count:     26,   Neg. LLF: 3596.276341787734\n",
-      "Iteration:      5,   Func. Count:     32,   Neg. LLF: 3595.7266832632695\n",
-      "Iteration:      6,   Func. Count:     38,   Neg. LLF: 3591.701720947691\n",
-      "Iteration:      7,   Func. Count:     43,   Neg. LLF: 3591.689677620988\n",
-      "Iteration:      8,   Func. Count:     48,   Neg. LLF: 3591.6888351247517\n",
-      "Iteration:      9,   Func. Count:     53,   Neg. LLF: 3591.6887824051796\n",
-      "Iteration:     10,   Func. Count:     58,   Neg. LLF: 3591.6887801556895\n",
-      "Iteration:     11,   Func. Count:     62,   Neg. LLF: 3591.688780155602\n",
+      "Iteration:      1,   Func. Count:      6,   Neg. LLF: 3771.7104883016605\n",
+      "Iteration:      2,   Func. Count:     13,   Neg. LLF: 3910.4167612373767\n",
+      "Iteration:      3,   Func. Count:     20,   Neg. LLF: 3671.0292268192843\n",
+      "Iteration:      4,   Func. Count:     26,   Neg. LLF: 3595.8668242611107\n",
+      "Iteration:      5,   Func. Count:     32,   Neg. LLF: 3595.317313676273\n",
+      "Iteration:      6,   Func. Count:     38,   Neg. LLF: 3591.2739501309443\n",
+      "Iteration:      7,   Func. Count:     43,   Neg. LLF: 3591.2617764414554\n",
+      "Iteration:      8,   Func. Count:     48,   Neg. LLF: 3591.260941943763\n",
+      "Iteration:      9,   Func. Count:     53,   Neg. LLF: 3591.2608903737187\n",
+      "Iteration:     10,   Func. Count:     58,   Neg. LLF: 3591.260888166221\n",
+      "Iteration:     11,   Func. Count:     62,   Neg. LLF: 3591.260888166137\n",
       "Optimization terminated successfully    (Exit mode 0)\n",
-      "            Current function value: 3591.6887801556895\n",
+      "            Current function value: 3591.260888166221\n",
       "            Iterations: 11\n",
       "            Function evaluations: 62\n",
       "            Gradient evaluations: 11\n"
@@ -111,7 +211,7 @@
     }
    ],
    "source": [
-    "returns, cum_returns, stock_prices = simulate_stock(data['Return'], 1000, 252*10, data.Open[0])"
+    "returns, cum_returns, stock_prices = simulate_stock(data['Return'], 10, 252*10, data.Open[0])"
    ]
   },
   {
@@ -167,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "60312d0f",
    "metadata": {},
    "outputs": [],
@@ -211,7 +311,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "945f3427",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2530,7 +2632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
