renamed variables, CamelCase classes, market updates as self.state.

--- a/notebooks/garch_modelling.ipynb
+++ b/notebooks/garch_modelling.ipynb
@@ -41,10 +41,10 @@
     "\"\"\"\n",
     "Own packages\n",
     "\"\"\"\n",
-    "sys.path.insert(0, \"C:\\\\code\\\\speciale\\\\\") # vsl path\n",
-    "sys.path.insert(0, \"C:\\\\user\\\\noob\\\\\")\n",
+    "sys.path.insert(0, \"C:\\\\code\\\\speciale\\\\\") # vesl path\n",
+    "sys.path.insert(0, \"C:\\\\Users\\\\lucas\\\\OneDrive\\\\Skrivebord\\\\repo\\\\speciale\\\\\") # ljb path\n",
     "\n",
-    "import codelib\n",
+    "import codelib  # used for extending pandas\n",
     "\n",
     "\"\"\"\n",
     "ignore warnings\n",
