--- a/notebooks/market_simulation_main.ipynb
+++ b/notebooks/market_simulation_main.ipynb
@@ -2,15 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from agents import RandomAgent\n",
-    "from environment import market_env\n",
+    "\"\"\"\n",
+    "Magic commands\n",
+    "\"\"\"\n",
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "\"\"\"\n",
+    "Python standard packages\n",
+    "\"\"\"\n",
+    "import os\n",
+    "import sys\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "Own packages\n",
+    "\"\"\"\n",
+    "sys.path.insert(0, \"C:\\\\code\\\\speciale\\\\\") # vesl path\n",
+    "sys.path.insert(0, \"C:\\\\Users\\\\lucas\\\\OneDrive\\\\Skrivebord\\\\repo\\\\speciale\\\\\") # ljb path\n",
+    "\n",
+    "from market_simulation_study.agents import RandomAgent\n",
+    "from market_simulation_study.environment import MarketEnvironment\n"
    ]
   },
   {
@@ -25,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +60,7 @@
     "\n",
     "\n",
     "state0 = {\"market_prices\": price_list, \"execution_status\": ex_list, 'fee':fee }\n",
-    "env = market_env(state0)\n",
+    "env = MarketEnvironment(state0)\n",
     "agents = [RandomAgent(agent_id = j, latency = np.random.normal()) for j in range(n_agents)]\n",
     "\n",
     "\n",
@@ -58,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PNL SUM:  1.3073986337985843e-12\n"
+      "PNL SUM:  -2.7995383788947947e-12\n"
      ]
     },
     {
@@ -116,28 +137,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-6</td>\n",
-       "      <td>16.964856</td>\n",
+       "      <td>12</td>\n",
+       "      <td>105.948012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-5</td>\n",
-       "      <td>-30.726419</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-17.965668</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-28</td>\n",
-       "      <td>124.158606</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>-1.960222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-9</td>\n",
-       "      <td>4.057016</td>\n",
+       "      <td>14</td>\n",
+       "      <td>-66.582432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-10</td>\n",
-       "      <td>-4.560924</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>15.488779</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -146,28 +167,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>-14</td>\n",
-       "      <td>92.406917</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-37.747340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>6</td>\n",
-       "      <td>-31.561204</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-53.261634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>-5</td>\n",
-       "      <td>11.074856</td>\n",
+       "      <td>6</td>\n",
+       "      <td>151.618094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>4</td>\n",
-       "      <td>-30.509052</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>-42.998263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>-17</td>\n",
-       "      <td>60.768184</td>\n",
+       "      <td>15</td>\n",
+       "      <td>-77.935643</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,22 +197,22 @@
       ],
       "text/plain": [
        "   Position         PNL\n",
-       "0        -6   16.964856\n",
-       "1        -5  -30.726419\n",
-       "2       -28  124.158606\n",
-       "3        -9    4.057016\n",
-       "4       -10   -4.560924\n",
+       "0        12  105.948012\n",
+       "1        10  -17.965668\n",
+       "2        -6   -1.960222\n",
+       "3        14  -66.582432\n",
+       "4       -11   15.488779\n",
        "..      ...         ...\n",
-       "95      -14   92.406917\n",
-       "96        6  -31.561204\n",
-       "97       -5   11.074856\n",
-       "98        4  -30.509052\n",
-       "99      -17   60.768184\n",
+       "95        9  -37.747340\n",
+       "96        1  -53.261634\n",
+       "97        6  151.618094\n",
+       "98       -3  -42.998263\n",
+       "99       15  -77.935643\n",
        "\n",
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
