fixed agent package name

--- a/notebooks/market_simulation_main.ipynb
+++ b/notebooks/market_simulation_main.ipynb
@@ -30,7 +30,7 @@
     "sys.path.insert(0, \"C:\\\\code\\\\speciale\\\\\") # vesl path\n",
     "sys.path.insert(0, \"C:\\\\Users\\\\lucas\\\\OneDrive\\\\Skrivebord\\\\repo\\\\speciale\\\\\") # ljb path\n",
     "\n",
-    "from market_simulation_study.agent_rl import RandomAgent, InvestorAgent, TrendAgent, RLAgent\n",
+    "from market_simulation_study.agent import RandomAgent, InvestorAgent, TrendAgent, RLAgent\n",
     "from market_simulation_study.environment import MarketEnvironment\n"
    ]
   },
