nn and state saving

--- a/notebooks/order_book.ipynb
+++ b/notebooks/order_book.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 230,
    "id": "structured-mitchell",
    "metadata": {},
    "outputs": [
@@ -34,6 +34,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, SimpleRNN\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import math\n",
     "\"\"\"\n",
     "Own packages\n",
     "\"\"\"\n",
@@ -42,6 +48,172 @@
     "\n",
     "from market_simulation_study.agent import RandomAgent, InvestorAgent, TrendAgent, RLAgent, MarketMakerAgent\n",
     "from market_simulation_study.environment import MarketEnvironment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "a0890e75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_xy(data, time_steps):\n",
+    "    # Indices of target array\n",
+    "    #data_y = data[\"reward\"]\n",
+    "    data_y = data[:, -1]\n",
+    "    y_ind = np.arange(time_steps, len(data_y), time_steps)\n",
+    "    y = data_y[y_ind]\n",
+    "\n",
+    "    # Prepare X\n",
+    "    rows_x = len(y)\n",
+    "    data_x = data[:,:-1]\n",
+    "    x = data_x[range(time_steps*rows_x), :]\n",
+    "    n_features = data_x.shape[1]\n",
+    "    x = np.reshape(x, (rows_x, time_steps, n_features))    \n",
+    "    return x, y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "6aa612ae",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_rl = pd.read_feather('data/rl_state_space.feather').dropna()\n",
+    "data_x = df_rl.iloc[:, :-1]\n",
+    "data_y = df_rl['reward']\n",
+    "data_len = data_x.shape[0]\n",
+    "test_ratio = 0.3\n",
+    "time_steps = 3 # Number of previous timesteps to use for prediction \n",
+    "row_split = int((data_len * (1-test_ratio)))\n",
+    "\n",
+    "data_train, data_test = df_rl.iloc[:row_split,:], df_rl.iloc[row_split:, :]\n",
+    "data_train, data_test = data_train.to_numpy(), data_test.to_numpy()\n",
+    "x_train, y_train = generate_xy(data_train, time_steps)\n",
+    "x_test, y_test = generate_xy(data_test, time_steps)\n",
+    "#x_train, x_test = data_x.iloc[:row_split,:], data_x.iloc[row_split:,:]\n",
+    "#y_train, y_test = data_y.iloc[:row_split], data_y.iloc[row_split:]\n",
+    "#x_train = np.reshape(x_train, (row_split, time_steps, 1))\n",
+    "#x_test = np.reshape(x_test, (data_len - row_split, time_steps, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "5fcfa900",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nn(hidden_units, dense_units, input_shape, activation):    \n",
+    "    model = Sequential()\n",
+    "    model.add(SimpleRNN(hidden_units, input_shape=input_shape, \n",
+    "                        activation=activation[0]))\n",
+    "    model.add(Dense(units=dense_units, activation=activation[1]))\n",
+    "    model.compile(loss='mean_squared_error', optimizer='adam')\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "95803361",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "467/467 - 1s - loss: 2435913.5000\n",
+      "Epoch 2/20\n",
+      "467/467 - 0s - loss: 2421866.5000\n",
+      "Epoch 3/20\n",
+      "467/467 - 0s - loss: 2412687.2500\n",
+      "Epoch 4/20\n",
+      "467/467 - 0s - loss: 2408845.2500\n",
+      "Epoch 5/20\n",
+      "467/467 - 0s - loss: 2407022.5000\n",
+      "Epoch 6/20\n",
+      "467/467 - 0s - loss: 2409897.2500\n",
+      "Epoch 7/20\n",
+      "467/467 - 0s - loss: 2400766.0000\n",
+      "Epoch 8/20\n",
+      "467/467 - 0s - loss: 2405479.5000\n",
+      "Epoch 9/20\n",
+      "467/467 - 0s - loss: 2398230.5000\n",
+      "Epoch 10/20\n",
+      "467/467 - 0s - loss: 2397388.5000\n",
+      "Epoch 11/20\n",
+      "467/467 - 0s - loss: 2394783.0000\n",
+      "Epoch 12/20\n",
+      "467/467 - 0s - loss: 2395997.7500\n",
+      "Epoch 13/20\n",
+      "467/467 - 0s - loss: 2396562.7500\n",
+      "Epoch 14/20\n",
+      "467/467 - 0s - loss: 2391250.7500\n",
+      "Epoch 15/20\n",
+      "467/467 - 0s - loss: 2383839.5000\n",
+      "Epoch 16/20\n",
+      "467/467 - 0s - loss: 2386092.5000\n",
+      "Epoch 17/20\n",
+      "467/467 - 0s - loss: 2388959.2500\n",
+      "Epoch 18/20\n",
+      "467/467 - 0s - loss: 2387595.2500\n",
+      "Epoch 19/20\n",
+      "467/467 - 0s - loss: 2388288.2500\n",
+      "Epoch 20/20\n",
+      "467/467 - 0s - loss: 2380936.7500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x238bdbe4c70>"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = nn(hidden_units=30, dense_units=1, input_shape=(time_steps, 10), \n",
+    "                   activation=['relu', 'linear'])\n",
+    "model.fit(x_train, y_train, epochs=20, batch_size=1, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "a0898dc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train RMSE: 1544.491 RMSE\n",
+      "Test RMSE: 1435.921 RMSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_error(trainY, testY, train_predict, test_predict):    \n",
+    "    # Error of predictions\n",
+    "    train_rmse = math.sqrt(mean_squared_error(trainY, train_predict))\n",
+    "    test_rmse = math.sqrt(mean_squared_error(testY, test_predict))\n",
+    "    # Print RMSE\n",
+    "    print('Train RMSE: %.3f RMSE' % (train_rmse))\n",
+    "    print('Test RMSE: %.3f RMSE' % (test_rmse))    \n",
+    " \n",
+    "# predictions\n",
+    "train_predict = model.predict(x_train)\n",
+    "test_predict = model.predict(x_test)\n",
+    "# Mean square error\n",
+    "print_error(y_train, y_test, train_predict, test_predict)"
    ]
   },
   {
