--- a/notebooks/order_book.ipynb
+++ b/notebooks/order_book.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 1,
    "id": "structured-mitchell",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Magic commands\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 2,
    "id": "9aaaac7c",
    "metadata": {},
    "outputs": [],
@@ -70,13 +61,13 @@
     "    #data_x = scaler.fit_transform(data_x)\n",
     "    x = data_x[range(time_steps*rows_x), :]\n",
     "    n_features = data_x.shape[1]\n",
-    "    x = np.reshape(x, (rows_x, time_steps, n_features))    \n",
+    "    x = np.reshape(x, (rows_x, time_steps, n_features))\n",
     "    return x, y\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 3,
    "id": "bc61e0d7",
    "metadata": {
     "scrolled": true
@@ -119,8 +110,8 @@
     "    model = Sequential()\n",
     "#     model.add(SimpleRNN(hidden_units, input_shape=input_shape, \n",
     "#                         activation=activation[0]))\n",
-    "    model.add(LSTM(4, batch_input_shape=(batch_size, time_steps, 10), stateful=True, return_sequences=True))\n",
-    "    model.add(LSTM(4, batch_input_shape=(batch_size, time_steps, 10), stateful=True))\n",
+    "    model.add(LSTM(hidden_units, batch_input_shape=(batch_size, time_steps, 10), stateful=True, return_sequences=True))\n",
+    "    model.add(LSTM(hidden_units, batch_input_shape=(batch_size, time_steps, 10), stateful=True))\n",
     "    model.add(Dense(units=dense_units, activation=activation[1]))\n",
     "    model.compile(loss='mean_squared_error', optimizer='adam')\n",
     "    return model"
@@ -131,7 +122,7 @@
    "execution_count": 442,
    "id": "eab488c5",
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -239,7 +230,9 @@
    "cell_type": "code",
    "execution_count": 475,
    "id": "48e5b7fd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -268,6 +261,28 @@
     "    plt.ylabel('Reward')\n",
     "    plt.title('Actual and Predicted Values. The Red Line Separates The Training And Test Examples')\n",
     "plot_result(y_train, y_test, train_predict, test_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f074f8b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_rl = pd.read_feather('data/rl_state_space.feather').dropna()\n",
+    "instantaneous_rewards = df_rl[\"reward\"].values\n",
+    "\n",
+    "disc_reward = np.zeros_like(y_data)\n",
+    "gamma = 0.99\n",
+    "cum_reward = 0\n",
+    "for i in reversed(range(len(y_data))):\n",
+    "    cum_reward = cum_reward * gamma + instantaneous_rewards[i]\n",
+    "    disc_reward[i] = cum_reward\n",
+    "\n",
+    "# disc_reward[2] = y_data[2]\n",
+    "# disc_reward[1] = gamma * y_data[2] + y_data[1]\n",
+    "# disc_reward[0] = (gamma * y_data[2] + y_data[1]) * gamma + y_data[0]"
    ]
   },
   {
