added automatic plotting updates during training

--- a/notebooks/market_simulation_with_rl_main.ipynb
+++ b/notebooks/market_simulation_with_rl_main.ipynb
@@ -291,6 +291,38 @@
     "        rl_buy_volume.append(agents[-1].buy_volume)\n",
     "        market_prices.append(state[\"market_prices\"][-1])\n",
     "\n",
+    "\n",
+    "        \n",
+    "        #################################\n",
+    "        # VISUALISATION\n",
+    "        #################################\n",
+    "        \n",
+    "        if time % 100 == 0:\n",
+    "            clear_output()\n",
+    "            ax[0].cla()\n",
+    "            ax[0].plot(rl_positions, label = \"Positions\")\n",
+    "            ax[0].set(title = \"POSITION\")\n",
+    "            \n",
+    "            ax[1].cla()\n",
+    "            ax[1].set(title = \"PROFIT\")\n",
+    "            ax[1].plot(rl_profit, label = \"Profit\")\n",
+    "\n",
+    "            ax[2].cla()\n",
+    "            ax[2].plot(rl_buy_prices, label = \"Buy Price\", alpha = 0.5)\n",
+    "            ax[2].plot(rl_sell_prices, label = \"Sell Price\", alpha = 0.5)\n",
+    "            ax[2].plot(state[\"market_prices\"][100:], label = \"Market Price\")\n",
+    "            ax[2].set(title = \"MARKET PRICES\")\n",
+    "            ax[2].legend()\n",
+    "            \n",
+    "            ax[3].cla()\n",
+    "            ax[3].plot(rl_buy_volume, label = \"Buy Volume\", alpha = 0.5)\n",
+    "            ax[3].plot(rl_sell_volume, label = \"Sell Volume\", alpha = 0.5)\n",
+    "            ax[3].set(title = \"VOLUME\")\n",
+    "            ax[3].legend()\n",
+    "            \n",
+    "            display(fig)\n",
+    "        \n",
+    "        \n",
     "        #################################\n",
     "        # Print remaining runtime\n",
     "        #################################\n",
